--- a/public/AboutUS/aboutUs.css
+++ b/public/AboutUS/aboutUs.css
@@ -1,7 +1,106 @@
 body {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
+  body .headerB {
+    z-index: 999; }
+    body .headerB ul {
+      list-style-type: none;
+      text-decoration: none;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      font-size: 13px; }
+      body .headerB ul a {
+        color: black; }
+      body .headerB ul a:hover {
+        color: #ed1c24;
+        text-decoration: none; }
+    body .headerB li {
+      list-style-type: none;
+      padding: 10px 15px; }
+
+#imgInHL {
+  padding: 0 15px;
+  width: 100px;
+  height: auto; }
+
+#LInH {
+  background-color: #ed1c24;
+  color: white !important;
+  padding: 10px; }
+
+#LInH:hover {
+  color: black !important; }
+
+.iconsMes {
+  display: flex;
+  justify-content: center;
+  margin-top: 200px; }
+  .iconsMes i {
+    font-size: 24px;
+    padding: 0 10px; }
+  .iconsMes a {
+    color: black; }
+  .iconsMes a:hover {
+    color: #979797; }
+
+.listF ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+  font-size: 13px; }
+  .listF ul li {
+    padding: 25px 25px; }
+  .listF ul a {
+    color: black; }
+  .listF ul a:hover {
+    color: #ed1c24; }
+
+#FotL {
+  padding-right: 85px;
+  color: #bbbbbb; }
+
+#FotR {
+  padding-left: 85px; }
+  #FotR li {
+    display: flex;
+    flex-direction: column;
+    color: #bbbbbb;
+    text-align: center; }
+
+.infBlock {
+  display: flex;
+  align-items: center; }
+
+.artO {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  padding: 70px 0; }
+  .artO h3 {
+    color: white; }
+  .artO p {
+    color: #979797;
+    font-style: italic; }
+
+.artO h3::before {
+  content: url(../img/icon.png); }
+
+.algN {
+  display: flex;
+  flex-direction: column; }
+
+.FourSec {
+  width: 100%;
+  height: 1000px; }
+
+.infoFS {
+  text-align: center;
+  margin-top: 100px; }
+  .infoFS p {
+    color: #979797; }
+
 .conFImg {
   display: flex;
   align-items: center;
@@ -35,17 +134,30 @@ body {
   width: 62%;
   margin: 20px 0; }
 
-.AbtN {
+.butnInFTwo {
+  color: white;
+  font-size: 23px;
+  background-color: black;
+  border: 5px solid black;
+  padding: 5px 0;
+  width: 62%; }
+
+.butnInF:hover {
+  box-shadow: 1px 1px 10px #979797;
+  cursor: pointer; }
+
+.butnInFTwo:hover {
+  box-shadow: 1px 1px 10px #979797;
+  cursor: pointer; }
+
+nav {
   text-align: center;
-  padding: 100px 0;
-  }
-  .AbtN p {
+  padding: 100px 0; }
+  nav p {
     padding: 0 150px;
-    color: #979797;
-  }
-  .AbtN h1 {
-    font-weight: 300;
-  }
+    color: #979797; }
+  nav h1 {
+    font-weight: 300; }
 
 .infInBeli {
   text-align: center;
@@ -132,3 +244,5 @@ body {
     border-radius: 10px;
     margin: 20px 19px;
     padding: 80px 0; }
+
+/*# sourceMappingURL=aboutUs.css.map */
