--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -8,14 +8,14 @@
                         <li>
                             <a href="{{ path('home') }}"><b>Главная</b></a>
                         </li>
-                        <li><a href="{{ path('aboutUs') }}">О нас</a></li>
+                        <li><a href="{{ path('aboutUs') }}">Про нас</a></li>
                         <li><a href="{{ path('services') }}">Услуги</a></li>
                         <li>
                             <a href="/"><img id="imgInHL" src="/img/OctoLogo.svg" alt="logo" /></a>
                         </li>
                         <li><a href="{{ path('blog') }}">Блог</a></li>
                         <li><a href="#">Контакты</a></li>
-                        <li><a id="LInH" href="#">Вопросы есть?</a></li>
+                        <li><a id="LInH" href="#">Остались вопросы?</a></li>
                     </ul>
                 </div>
             </div>
