--- a/templates/pages/homePage.html.twig
+++ b/templates/pages/homePage.html.twig
@@ -13,10 +13,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 octH">
-                        <h1>OctoWice - мы лучшая веб-студия!</h1>
+                        <h1>OctoWice – Закажи сайт у культурных профессионалов!</h1>
                         <p>
-                            Вы офигеете от нашего профессионализма,<br> где вы найдете ещё такую
-                            команду?
+                            Сайты помогут – построить имидж, увеличить продажи,<br> привлечь новых клиентов.
                         </p>
                     </div>
                 </div>
@@ -30,7 +29,7 @@
 
                         <div class="Post">
                             <div class="BuCen">
-                                <p>Кто мы такие?</p>
+                                <p>Узнать о нас? </p>
                             </div>
 
                         </div>
@@ -59,8 +58,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 LineP">
-                        <h2>Приемущества?</h2>
-                        <p><small>Вот почему мы лучший выбор: </small></p>
+                        <h2>Типажи сайтов которые мы делаем</h2>
+                        <p><small>А какой сайт нужен вам?</small></p>
                     </div>
                 </div>
 
@@ -70,20 +69,20 @@
                         <div class="row">
                             <div class="col-lg-12 col-md-12 artO">
                                 <h3>
-                                    Пункт почему мы лучше
+                                    Лендинг страница
+
                                 </h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis nihil impedit animi ratione,
-                                    veniam eveniet.</p>
+                                <p>одностраничный сайт отличается повышенной конверсией, меньшей информативностью по сравнению с другими сайтами.</p>
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="col-lg-12 col-md-12 artO">
                                 <h3>
-                                    Пункт почему мы лучше
+                                    Сайт каталог
                                 </h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis nihil impedit animi ratione,
-                                    veniam eveniet.</p>
+                                <p>идеальный тип сайта для отображения товаров или услуг методом каталога
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -97,20 +96,20 @@
                         <div class="row">
                             <div class="col-lg-12 col-md-12 artO">
                                 <h3>
-                                    Пункт почему мы лучше
+                                    Информационный сайт
                                 </h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis nihil impedit animi ratione,
-                                    veniam eveniet.</p>
+                                <p>сайт с повышенной информативностью, подходит для описания вашего проекта
+                                </p>
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="col-lg-12 col-md-12 artO">
                                 <h3>
-                                    Пункт почему мы лучше
+                                    Интернет магазин
                                 </h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis nihil impedit animi ratione,
-                                    veniam eveniet.</p>
+                                <p>любимые всеми магазины, похожи на сайты каталоги, однако есть функция покупки
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -124,7 +123,7 @@
 
             <div class="blInF">
                 <div class="Serv">
-                    <h2>Наши услуги</h2>
+                    <a href="#"><h2>Наши услуги</h2></a>
                 </div>
             </div>
 
@@ -135,7 +134,7 @@
         <section class="TwoSec">
 
             <h1>Этапы создания сайта</h1>
-            <p>Через что мы пройдем вмести с Вами?</p>
+            <p>Что же мы пройдём, создавая ваш проект?</p>
 
 
             <div class="blockOne">
@@ -144,18 +143,18 @@
                         <div class="col-lg-12 col-md-12 blockCol">
 
                             <div>
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo aut magni excepturi eos delectus ut?</p>
+                                <p>Знакомимся с вами, узнаем ваши пожелания, анализируем вашу нишу (лидеров рынка)</p>
                                 <h3>Старт</h3>
                             </div>
 
                             <div>
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo aut magni excepturi eos delectus ut?</p>
-                                <h3>Старт</h3>
+                                <p>После полного анализа рынка мы можем создать ядро </p>
+                                <h3>Создание семантического ядра </h3>
                             </div>
 
                             <div>
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo aut magni excepturi eos delectus ut?</p>
-                                <h3>Старт</h3>
+                                <p>На основе ядра прописываться тексты сайта</p>
+                                <h3>Написание текстов </h3>
                             </div>
 
                         </div>
@@ -180,18 +179,19 @@
                         <div class="col-lg-12 col-md-12 blockCol">
 
                             <div>
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo aut magni excepturi eos delectus ut?</p>
-                                <h3>Старт</h3>
+                                <h3>Дизайн </h3>
+                                <p>Благодаря прописанным текстам и созданной структуре сайта ранее, делаем удобный и красивый дизайн вашего сайта </p>
                             </div>
 
                             <div>
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo aut magni excepturi eos delectus ut?</p>
-                                <h3>Старт</h3>
+                                <h3>Верстка </h3>
+                                <p>Создание прототипа сайта</p>
                             </div>
 
                             <div>
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo aut magni excepturi eos delectus ut?</p>
-                                <h3>Старт</h3>
+                                <h3>Оптимизация и доработка проекта  </h3>
+                                <p>Доработка текстов, внешнего вида и сео-показателей</p>
+
                             </div>
 
                         </div>
@@ -204,16 +204,16 @@
 
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-12 col-md-12">
+                        <div class="col-lg-12 col-md-12 brifC">
 
                             <a href="#">
                                 <div class="firstButton">
-                                    <p>Заполнить Бриф</p>
+                                    <p>Наши услуги</p>
                                 </div>
                             </a>
 
                             <a href="#">
-                                <div class="twoButton">Позвоните мне</div>
+                                <div class="twoButton">Заказать звонок</div>
                             </a>
 
                         </div>
@@ -231,14 +231,26 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 hInImg">
-                        <h1>Есть желание узнать больше?</h1>
+                        <h1>Зачем заказывать сайт?</h1>
                         <p>Получите больше информации в нашем блоге</p>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-lg-12 col-md-12 blogTextInf">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis vitae, sunt esse reiciendis illo dolores ullam ea velit? Minus praesentium itaque debitis perferendis perspiciatis eius id laudantium quod, possimus repellat, quis inventore doloribus, quibusdam voluptatem qui recusandae velit odio. Quisquam quam excepturi rerum velit consequuntur magnam officiis, distinctio reprehenderit molestiae soluta illum mollitia qui non deserunt cum quaerat itaque ipsum molestias aperiam ex atque adipisci. Aliquam animi aut dolorem eligendi maiores saepe debitis dolore doloremque veritatis voluptatum. Cum esse fugit autem reprehenderit consectetur, aperiam odit sint fuga molestias provident possimus facilis, nemo quasi. Possimus, distinctio autem aliquam, earum obcaecati, consequatur quae deserunt consequuntur quod vel facere ducimus omnis eos sapiente exercitationem rerum aut eveniet asperiores corporis blanditiis atque nesciunt repudiandae cum optio? Totam aspernatur, ea tenetur at eaque asperiores quas ad quia labore voluptas dolorum illo culpa. Ea ex saepe exercitationem labore praesentium, minus accusamus rerum nemo nulla harum inventore. Velit numquam nemo, pariatur, assumenda alias libero doloribus facere maxime, dolorem repellat voluptates quae perspiciatis? Eaque atque beatae architecto distinctio totam sequi, necessitatibus inventore ullam, ipsam nulla excepturi rerum sunt alias pariatur culpa veritatis? Esse officiis quisquam voluptatum ratione, totam aspernatur ad odit laboriosam quia eius blanditiis accusantium excepturi dolorum distinctio architecto ducimus repellat soluta corporis? Nam perspiciatis quibusdam pariatur modi, nesciunt rem rerum! Minus distinctio pariatur quisquam exercitationem incidunt rem nulla quas quasi repudiandae, temporibus consequuntur eos delectus voluptatum ea sit quod maiores vitae mollitia possimus veniam adipisci esse in modi? Exercitationem recusandae cum illo similique magnam iste facere ipsam nihil sed molestias adipisci expedita eaque quas laboriosam iusto enim ratione consequatur quo inventore hic, sapiente tenetur repellendus aliquam! Doloremque fuga, autem ea itaque adipisci eveniet non numquam mollitia, optio totam rerum harum odit corporis quasi accusantium! Praesentium fugiat neque vel quisquam nihil cumque, enim ex rem labore repellendus.</p>
+                        <p>Во времена ежесекундной конкуренции в разных нишах, заказать сайт кажется самым логичным решением. Сайт – работает всё время, для вас, повышая вовлеченность в ваш бизнес или создавая спрос на ваши товары / услуги.  У нас можно заказать сайт под любой вид деятельности. Будь-то сайт визитка, лендинг страница, сайт каталог или вовсе интернет магазин мы гарантируем индивидуальный подход к каждому проекту.  Мы делаем анализ конкурентов по внешнему виду, сео-составляющим, анализируя по ходу ошибки и удачные моменты в их работах.</p>
+                        <br>
+
+                        <p><b>Что мы предлагаем?</b> Недорогие сайты по рынку и за свое качество, мы предоставляем пакеты 3 уровней, дешёвый сайт – это сайт по созданным шаблонам заранее, в каждом шаблоне вы можете изменить определенный перечень свойств.
+                            Собственный недорогой сайт – это сбалансированная по цене и качеству услуга, анализ рынка, индивидуальный дизайн, возможность заказать сео-тексты и дополнения из списка.
+                            Профессиональный пакет – сайт, построенный на анализе конкурентов, отлажен до идеала. В пакет входит полугодовая техническая поддержка, сео оптимизация и добавление ссылочной массы, контроль показателей сайта и составление отчётов на протяжении 3 месяцев. А также гарантия на наши услуги в течении полугода.
+                            Заказывая сайт в нашей студии, вы получаете работающие решения, необходимые именно вашему бизнесу. Мы относимся к вам как к партнёрам, из-за чего у нас интерес в развитии вашего проекта в разы больше чем у простых студий. Ещё по одной причине у нас сильный интерес в развитии вашего проекта – чем успешнее ваш проект будет - лучше реклама будет наших услуг.
+                        </p>
+                        <p><b>Почему стоит обратится к нам?</b>
+                            Заказывая дешевый сайт у людей, которые только начинают развитие в сфере веб индустрии вы ставите под вопрос успешность вашего проекта. Из-за незнания мелочей и банальной неопытности вы рискуете потерять рейтинг в поисковике. Увеличение сложности продвижение, больше затрат на рекламу – вот что вас ждёт. Заказав сайт у профессионалов, вы сразу же отделяете себя от этих проблем.  Вовремя работы над проектом вы получаете еженедельный отчёт по выполненной работе, то есть вам остается только проверить.
+                            Недорогие сайты по всей Украине вы можете заказать в веб-студии OctoWice, наше сотрудничество не будет безуспешным, мы сможем повысить вовлеченность аудитории, повысить конверсию и в конце концов сделать сайт отличающимся отменным дизайном, продуманной структурой и отличной работой.
+                            Свяжитесь с нами!
+                        </p>
                     </div>
                 </div>
 
@@ -267,15 +279,13 @@
                     <div class="col-lg-12 col-md-12 infoFS">
                         <h1>Наши Контакты</h1>
                         <p><small><i>Свяжись с нами. Работаем с 10:00 - 19:00</i></small></p>
-                        <div class="conFImg">
+                        <div class="col-lg-12 col-md-12 conFImg">
                             <div class="oneObj">
                                 <i class="fas fa-phone"></i>
-                                <!-- <img src="/OctoWiceNew/img/Phone.svg" alt="phone"> -->
                                 <p><small>38(066)010-51-78</small></p>
                             </div>
                             <div class="twoObj">
                                 <i class="fas fa-envelope"></i>
-                                <!-- <img src="/OctoWiceNew/img/Mail.svg" alt="mail"> -->
                                 <p><small>octowice@gmail.com</small></p>
                             </div>
                         </div>
