--- a/public/style/style.scss
+++ b/public/style/style.scss
@@ -2,6 +2,10 @@ body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     box-sizing: border-box;
 
+  nav {
+    text-align: left;
+    padding: 0;
+  }
 
 .headerB {
     z-index: 999;
@@ -160,6 +164,18 @@ body {
     border: 5px solid white;
     padding: 10px 100px;
     margin-top: 50px;
+
+   a {
+     color: white;
+   }
+
+   a:hover {
+      color: lightgray;
+   }
+
+   h2 {
+    cursor: pointer;
+   }
 }
 
 .blInF {
@@ -167,6 +183,7 @@ body {
     align-items: center;
     justify-content: center;
     max-width: 100%;
+
 }
 
 .TwoSec {
@@ -275,8 +292,13 @@ body {
     background-color: black;
     border: 5px solid black;
     padding: 5px 0;
-    width: 62%;
+    width: 100%;
+    text-align: center;
  }
+
+#contacts_save {
+  width: 100%;
+}
 
  .butnInF:hover {
      box-shadow: 1px 1px 10px #979797;
@@ -346,7 +368,7 @@ body {
      text-align: center;
      display: flex;
      flex-direction: column;
-     padding: 70px 0;
+     padding: 120px 0;
      h3 {
         color: white;
      }
@@ -387,6 +409,24 @@ body {
     display: flex;
     flex-direction: row;
     text-align: center;
+
+    div {
+      width: 100%;
+      margin-top: 50px;
+      p {
+        font-size: 14px;
+      }
+    }
+}
+
+.brifC {
+  a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 250px;
+  }
+
 }
 
 .buttonBlock {
@@ -395,6 +435,7 @@ body {
         align-items: center;
         justify-content: center;
         margin: 20px;
+
         p {
             color: black !important;
             text-align: center;
@@ -417,20 +458,25 @@ body {
     font-size: 23px;
     color: white;
     background-color: red;
-    padding:  10px !important;
+    padding: 10px !important;
+    margin-left: 20px !important;
+
 }
 
 .blogTextInf {
     color: #979797;
     text-align: center;
     line-height: 30px;
-    margin-top: 200px;
+    margin-top: 100px;
+  b {
+    font-size: 20px;
+  }
 }
 
 .buttonInInfBlock {
     display: flex;
     justify-content: center;
-    margin-top: 200px;
+    margin-top: 150px;
     button {
         padding: 10px 20px;
         border: none;
