--- a/public/AboutUS/aboutUs.css
+++ b/public/AboutUS/aboutUs.css
@@ -77,7 +77,7 @@ body {
   text-align: center;
   display: flex;
   flex-direction: column;
-  padding: 70px 0; }
+  padding: 120px 0; }
   .artO h3 {
     color: white; }
   .artO p {
@@ -115,7 +115,7 @@ body {
   flex-direction: column;
   align-items: center; }
   .inpInF input {
-    max-width: 100%;
+    width: 100%;
     margin: 10px 0;
     height: 50px;
     text-align: center; }
