--- a/public/AboutUS/aboutUs.scss
+++ b/public/AboutUS/aboutUs.scss
@@ -162,7 +162,7 @@ body {
     flex-direction: column;
     align-items: center;
     input {
-        max-width: 100%;
+        width: 100%;
         margin: 10px 0;
         height: 50px;
         text-align: center;
