--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -6,7 +6,7 @@
                 <div class="col-lg-12 col-md-12 headerB">
                     <ul>
                         <li>
-                            <a href="{{ path('home') }}"><b>Главная</b></a>
+                            <a id="app" href="{{ path('home') }}"><b>Главная</b></a>
                         </li>
                         <li><a href="{{ path('aboutUs') }}">Про нас</a></li>
                         <li><a href="{{ path('services') }}">Услуги</a></li>
@@ -15,7 +15,7 @@
                         </li>
                         <li><a href="{{ path('blog') }}">Блог</a></li>
                         <li><a href="#">Контакты</a></li>
-                        <li><a id="LInH" href="#">Остались вопросы?</a></li>
+                        <li><a href="#">Остались вопросы?</a></li>
                     </ul>
                 </div>
             </div>
